Fix alignment issues for mobile; add responsive el

--- a/app/client/stylesheets/partials/blocks/_block.body.esque.scss
+++ b/app/client/stylesheets/partials/blocks/_block.body.esque.scss
@@ -57,7 +57,6 @@
     border: none;
     width: 48px;
     height: 32px;
-    padding: 0.25rem;
     margin-left: 0.5rem;
     display: inline-flex;
     align-items: center;
@@ -65,13 +64,23 @@
     @include setBgColorAndHover();
   }
 
+  &__heart-counter-container {
+    width: 100%;
+    height: 100%;
+    padding-bottom: 4px;
+  }
+
   &__counter {
+    display: inline-block;
     margin-right: 0.25rem;
+    vertical-align: middle;
   }
 
   &__heart {
     width: 16px;
     height: 16px;
+    display: inline-block;
+    vertical-align: middle;
 
     &--fill {
       fill: #cacaca;
